# vrep_remote_api_shm

./: .gitignore  CMakeLists.txt  README.md
common/: shared_memory.c
include/: shared_memory.h
lib/: libremoteApi.dylib  libv_repExtRemoteApi.dylib  test_shm
lib/Debug/: libv_repExtRemoteApi.exp  libv_repExtRemoteApi.ilk  libv_repExtRemoteApi.lib  remoteApi.exp  remoteApi.ilk  remoteApi.lib  test_shm.ilk
lib/Release/: libv_repExtRemoteApi.exp  libv_repExtRemoteApi.lib  remoteApi.exp  remoteApi.lib
remoteApi/: extApi.c  extApiPlatform.c  extApiPlatform.h
remoteApiBindings/lib/: makefile
test/: main.cpp  test.ttt
v_repExtRemoteApi/: inConnection.cpp  inConnection.h  makefile  simxConnections.cpp  simxSocket.cpp  v_repExtRemoteApi.cpp  v_repExtRemoteApi.vcxproj
v_repExtRemoteApi/x64/Release/: v_repExtRemoteApi.exp  v_repExtRemoteApi.iobj  v_repExtRemoteApi.ipdb  v_repExtRemoteApi.lib
v_repExtRemoteApi/x64/Release/v_repExt.33B33469.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  v_repExtRemoteApi.lastbuildstate  v_repExtRemoteApi.write.1u.tlog
